--- a/project/res/layout/row_tablet_room_rate.xml
+++ b/project/res/layout/row_tablet_room_rate.xml
@@ -11,6 +11,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -44,20 +46,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginRight="12dp"
+            android:layout_marginRight="24dp"
             android:paddingTop="@dimen/non_refundable_tweak"
             android:text="@string/Non_Refundable"
             android:textSize="17sp" />
 
         <Button
             android:id="@+id/room_rate_button_add_select"
-            android:layout_width="wrap_content"
-            android:layout_height="32dp"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_gravity="center"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="5dp"
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
             android:includeFontPadding="false"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
@@ -71,23 +71,21 @@
         android:id="@+id/room_rate_detail_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginBottom="26dp"
+        android:layout_marginTop="24dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/room_rate_image_view"
-            android:layout_width="250dp"
-            android:layout_height="150dp"
-            android:layout_marginRight="10dp"
+            android:layout_width="189dp"
+            android:layout_height="125dp"
+            android:layout_marginRight="24dp"
             android:gravity="center"
             android:scaleType="centerCrop" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
             android:orientation="vertical">
 
             <com.expedia.bookings.widget.TextView
