--- a/project/res/layout/row_tablet_room_rate.xml
+++ b/project/res/layout/row_tablet_room_rate.xml
@@ -67,7 +67,7 @@
             android:textStyle="bold" />
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/room_rate_detail_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -79,13 +79,31 @@
             android:id="@+id/room_rate_image_view"
             android:layout_width="189dp"
             android:layout_height="125dp"
+            android:layout_alignParentLeft="true"
             android:layout_marginRight="24dp"
             android:gravity="center"
             android:scaleType="centerCrop" />
 
+        <TextView
+            android:id="@+id/room_rate_discount_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignRight="@id/room_rate_image_view"
+            android:layout_alignTop="@id/room_rate_image_view"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/bg_sale_text_view"
+            android:paddingBottom="1dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingTop="1dp"
+            android:singleLine="true"
+            android:textColor="@android:color/white" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/room_rate_image_view"
             android:orientation="vertical">
 
             <com.expedia.bookings.widget.TextView
@@ -117,6 +135,6 @@
 
         </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
