--- a/project/res/layout/row_tablet_room_rate.xml
+++ b/project/res/layout/row_tablet_room_rate.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/text_room_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ellipsize="end"
+                android:ellipsize="marquee"
                 android:singleLine="true"
                 android:textColor="#000000"
                 android:textSize="17sp"
@@ -53,7 +53,7 @@
 
         <Button
             android:id="@+id/room_rate_button_add_select"
-            android:layout_width="120dp"
+            android:layout_width="wrap_content"
             android:layout_height="35dp"
             android:layout_alignParentRight="true"
             android:layout_gravity="center_vertical"
