--- a/project/res/layout/row_tablet_room_rate.xml
+++ b/project/res/layout/row_tablet_room_rate.xml
@@ -36,6 +36,7 @@
                 android:id="@+id/text_bed_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:singleLine="true"
                 android:textColor="#5f6061"
                 android:textSize="15sp"
                 app:textStyle="light" />
