Hotel Details - Removed hacky view size changing code

--- a/project/res/layout/fragment_tablet_hotel_details.xml
+++ b/project/res/layout/fragment_tablet_hotel_details.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- The margins of this layout are dynamically changed by TabletResultsActivity -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:id="@+id/root_layout"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:padding="64dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/root_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingTop="@dimen/hotel_details_window_margin_y"
+    android:paddingBottom="@dimen/hotel_details_window_margin_y"
+    android:paddingLeft="@dimen/hotel_details_window_margin_x"
+    android:paddingRight="@dimen/hotel_details_window_margin_x">
 
     <FrameLayout
         android:id="@+id/popup_frame_layout"
@@ -38,6 +40,7 @@
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentRight="true"
                         android:layout_alignParentTop="true"
+                        android:layout_marginTop="@dimen/hotel_header_height"
                         android:background="@color/tablet_white_pane_bg"
                         android:paddingTop="4dp">
 
@@ -154,7 +157,7 @@
                     <com.expedia.bookings.widget.HotelDetailsStickyHeaderLayout
                         android:id="@+id/header_container"
                         android:layout_width="match_parent"
-                        android:layout_height="200dp">
+                        android:layout_height="@dimen/hotel_header_height">
 
                         <!-- Hotel image (#1822) -->
 
