--- a/project/res/values-sw800dp/dimens.xml
+++ b/project/res/values-sw800dp/dimens.xml
@@ -15,4 +15,9 @@
     <dimen name="destination_search_tile_width">259dp</dimen>
     <dimen name="destination_search_tile_height">220dp</dimen>
 
+    <!-- Hotel Details -->
+    <dimen name="hotel_details_window_margin_x">120dp</dimen>
+    <dimen name="hotel_details_window_margin_y">64dp</dimen>
+    <dimen name="hotel_header_height">272dp</dimen>
+
 </resources>
