Re-energied the hotel details reviews button

--- a/project/res/layout/fragment_tablet_hotel_details.xml
+++ b/project/res/layout/fragment_tablet_hotel_details.xml
@@ -78,6 +78,7 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/user_rating_container"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_gravity="center_vertical"
