--- a/project/res/values/colors.xml
+++ b/project/res/values/colors.xml
@@ -124,7 +124,7 @@
     <color name="bg_signin_dialog_button_focused">#18000000</color>
     <color name="bg_signin_dialog_button_pressed">#30000000</color>
     <color name="bg_signin_dialog_button_disabled">@android:color/transparent</color>
-    <color name="row_background_review">#f1f1f1</color>
+    <color name="row_background_review">#ffffff</color>
     <color name="user_review_separator">#dddddd</color>
     <color name="hotel_details_separator">#d1d1d1</color>
     <color name="legal_info_blue">#235285</color>
