--- a/project/res/layout/row_user_review.xml
+++ b/project/res/layout/row_user_review.xml
@@ -2,106 +2,82 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="15dp"
-    android:paddingRight="15dp"
     android:paddingTop="10dp" >
 
     <View
         android:id="@+id/user_review_separator"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/one_px_hdpi_two_px_xhdpi"
         android:layout_alignParentTop="true"
         android:layout_marginBottom="9dp"
-        android:background="@color/user_review_separator" />
+        android:background="#edeef0" />
 
-    <RatingBar
-        android:id="@+id/user_review_rating_bar"
-        style="?attr/hotelListingUserRatingStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/user_review_separator"
-        android:layout_margin="3dp"
-        android:isIndicator="true"
-        android:numStars="5"
-        android:stepSize="0.5" />
-
-    <TextView
+    <com.expedia.bookings.widget.TextView
         android:id="@+id/user_review_title_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@id/user_review_separator"
-        android:layout_margin="3dp"
-        android:layout_toLeftOf="@id/user_review_rating_bar"
+        android:layout_below="@+id/user_review_separator"
         android:ellipsize="end"
         android:singleLine="true"
-        android:textColor="#333"
-        android:textStyle="bold" />
+        android:textColor="#000000"
+        android:textSize="17sp" />
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/user_review_info_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/user_review_title_text_view"
+        android:gravity="center_vertical"
+        android:orientation="horizontal" >
+
+        <RatingBar
+            android:id="@+id/user_review_rating_bar"
+            style="@style/V2.Widget.RatingBar.UserReview.Yellow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:isIndicator="true"
+            android:numStars="5"
+            android:stepSize="0.5" />
+
+        <com.expedia.bookings.widget.TextView
+            android:id="@+id/user_review_name_location_date_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textColor="#4b566b"
+            android:textSize="14sp" />
+
+        <com.expedia.bookings.widget.TextView
+            android:id="@+id/user_review_name_and_location_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textColor="#4b566b"
+            android:textSize="14sp" />
+
+        <com.expedia.bookings.widget.TextView
+            android:id="@+id/user_review_date_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:textColor="#4b566b"
+            android:textSize="14sp" />
+
+    </LinearLayout>
+
+    <com.expedia.bookings.widget.TextView
         android:id="@+id/user_review_body_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/user_review_title_text_view"
-        android:layout_marginLeft="3dp"
-        android:layout_marginRight="3dp"
-        android:layout_marginTop="4dp"
-        android:textColor="#333" />
-
-    <View
-        android:id="@+id/user_review_body_text_fade_bottom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/user_review_body_text_view"
-        android:layout_alignLeft="@id/user_review_body_text_view"
-        android:layout_alignRight="@id/user_review_body_text_view"
-        android:layout_alignTop="@id/user_review_body_text_view"
-        android:background="@drawable/bg_user_review_fade" />
-
-    <LinearLayout
-        android:id="@+id/read_more_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/user_review_body_text_view"
-        android:gravity="center"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:id="@+id/user_review_read_more_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawablePadding="6dp"
-            android:drawableRight="@drawable/ic_expand"
-            android:paddingBottom="4dp"
-            android:text="@string/user_review_read_more"
-            android:textColor="#898989"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/user_review_date_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/read_more_layout"
-        android:layout_marginRight="3dp"
-        android:layout_marginTop="4dp"
-        android:textColor="#787878" />
-
-    <TextView
-        android:id="@+id/user_review_name_and_location_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@id/read_more_layout"
-        android:layout_marginLeft="3dp"
-        android:layout_marginTop="4dp"
-        android:layout_toLeftOf="@id/user_review_date_text_view"
-        android:ellipsize="end"
-        android:singleLine="true"
-        android:textColor="#787878" />
+        android:layout_below="@id/user_review_info_container"
+        android:paddingRight="@dimen/user_review_text_padding_right"
+        android:textColor="#4b566b"
+        android:textSize="14sp" />
 
 </RelativeLayout>
