--- a/project/res/values-sw600dp/dimens.xml
+++ b/project/res/values-sw600dp/dimens.xml
@@ -38,4 +38,7 @@
     <!-- Tablet text size for Baggage fees TextViews -->
     <dimen name="flight_details_baggage_fee_text_view_text_size">16dp</dimen>
 
+    <!-- Tablet User review dimens -->
+    <dimen name="user_review_text_padding_right">32dp</dimen>
+
 </resources>
