--- a/project/res/layout/fragment_tablet_hotel_details.xml
+++ b/project/res/layout/fragment_tablet_hotel_details.xml
@@ -13,6 +13,7 @@
         android:background="@drawable/bg_tablet_hotel_details">
 
         <com.expedia.bookings.widget.RoundedCornerFrameLayout
+            android:id="@+id/rounded_corner_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:radius="2dp">
