--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -96,6 +96,12 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
+    <style name="V2.Theme.Activity.TabletResults.WebActivity" tools:targetApi="11">
+        <item name="android:windowActionBarOverlay" tools:targetApi="11">false</item>
+        <item name="android:actionBarStyle" tools:targetApi="11">@style/V2.Widget.ActionBar.TabletLaunch</item>
+    </style>
+
+
     <style name="V2.Theme.Activity.TabletCheckout" tools:targetApi="14">
         <item name="android:windowActionBarOverlay">true</item>
         <item name="android:actionBarStyle">@style/V2.Widget.ActionBar.TabletCheckout</item>
