--- a/project/res/layout/row_tablet_room_rate.xml
+++ b/project/res/layout/row_tablet_room_rate.xml
@@ -54,7 +54,8 @@
 
         <FrameLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical" >
 
             <Button
                 android:id="@+id/room_rate_button_add"
@@ -70,7 +71,7 @@
                 android:textAllCaps="true"
                 android:textColor="@android:color/white"
                 android:textSize="15sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
 
             <Button
@@ -87,7 +88,7 @@
                 android:textAllCaps="true"
                 android:textColor="@android:color/white"
                 android:textSize="15sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
         </FrameLayout>
     </LinearLayout>
@@ -96,7 +97,7 @@
         android:id="@+id/room_rate_detail_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="26dp"
+        android:layout_marginBottom="24dp"
         android:layout_marginTop="24dp"
         android:orientation="horizontal"
         android:visibility="gone">
@@ -158,6 +159,29 @@
                 android:textColor="#666666"
                 android:textSize="16sp"
                 app:textStyle="bold" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/room_rate_renovation_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/room_rate_image_view"
+            android:layout_marginTop="15dp">
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/room_rate_renovation_notice_text"
+                style="@style/TabletRoomRateNoticeFeesText"
+                android:drawableLeft="@drawable/ic_renovation"
+                android:text="@string/property_undergoing_renovations"
+                app:textStyle="light" />
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/room_rate_renovation_more_info"
+                style="@style/TabletRoomRateNoticeMoreInfo"
+                android:text="@string/more_info"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
