--- a/project/res/values/styles.xml
+++ b/project/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <!-- System -->
 
@@ -1059,6 +1059,31 @@
 
     <style name="LoginButtonLogoutImageStyle">
         <item name="android:padding">8dp</item>
+    </style>
+
+    <!-- Tablet Hotel Details related styles -->
+    <style name="TabletRoomRateNoticeFeesText">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textColor">#5f6061</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:drawablePadding">10dp</item>
+    </style>
+
+    <style name="TabletRoomRateNoticeMoreInfo">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:layout_marginLeft">15dp</item>
+        <item name="android:layout_marginRight">15dp</item>
+        <item name="android:text">@string/more_info</item>
+        <item name="android:textColor">#e4822a</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@drawable/bg_tablet_confirmation_actionbutton</item>
     </style>
 
 </resources>
