2744. Room selection (tablet)
This takes care of expanding the room description and the related layouts.

--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -315,6 +315,9 @@
     <!-- Hotel Details Rooms and rates row initial/unexpanded height -->
     <dimen name="hotel_room_rate_list_height">84dp</dimen>
 
+    <!-- Hotel Details Rooms and rates detail container margin top/bottom -->
+    <dimen name="hotel_room_rate_detail_container_margin">24dp</dimen>
+
     <!-- User review dimens -->
     <dimen name="user_review_text_padding_right">0dp</dimen>
 
