--- a/project/res/layout/row_tablet_room_rate.xml
+++ b/project/res/layout/row_tablet_room_rate.xml
@@ -13,8 +13,8 @@
         android:id="@+id/room_rate_detail_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginBottom="@dimen/hotel_room_rate_detail_container_margin"
+        android:layout_marginTop="@dimen/hotel_room_rate_detail_container_margin"
         android:orientation="horizontal"
         android:visibility="gone">
 
@@ -77,58 +77,59 @@
                 app:textStyle="bold" />
 
         </LinearLayout>
+    </RelativeLayout>
+
+    <View
+        android:id="@+id/room_rate_center"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp" />
+
+    <LinearLayout
+        android:id="@+id/notice_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/room_rate_renovation_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@+id/room_rate_image_view"
-            android:orientation="vertical">
+            android:layout_marginBottom="15dp">
 
-            <LinearLayout
-                android:id="@+id/room_rate_renovation_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp">
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/room_rate_renovation_notice_text"
+                style="@style/TabletRoomRateNoticeFeesText"
+                android:drawableLeft="@drawable/ic_renovation"
+                android:text="@string/property_undergoing_renovations"
+                app:textStyle="light" />
 
-                <com.expedia.bookings.widget.TextView
-                    android:id="@+id/room_rate_renovation_notice_text"
-                    style="@style/TabletRoomRateNoticeFeesText"
-                    android:drawableLeft="@drawable/ic_renovation"
-                    android:text="@string/property_undergoing_renovations"
-                    app:textStyle="light" />
-
-                <com.expedia.bookings.widget.TextView
-                    android:id="@+id/room_rate_renovation_more_info"
-                    style="@style/TabletRoomRateNoticeMoreInfo"
-                    android:text="@string/more_info"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/room_rate_resort_fees_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_below="@+id/room_rate_image_view"
-                android:layout_marginTop="15dp">
-
-                <com.expedia.bookings.widget.TextView
-                    android:id="@+id/room_rate_resort_fees_text"
-                    style="@style/TabletRoomRateNoticeFeesText"
-                    android:drawableLeft="@drawable/ic_renovation"
-                    android:text="@string/property_undergoing_renovations"
-                    app:textStyle="light" />
-
-                <com.expedia.bookings.widget.TextView
-                    android:id="@+id/room_rate_resort_fees_more_info"
-                    style="@style/TabletRoomRateNoticeMoreInfo"
-                    android:text="@string/more_info"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/room_rate_renovation_more_info"
+                style="@style/TabletRoomRateNoticeMoreInfo"
+                android:text="@string/more_info"
+                android:textStyle="bold" />
         </LinearLayout>
 
-    </RelativeLayout>
+        <LinearLayout
+            android:id="@+id/room_rate_resort_fees_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp">
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/room_rate_resort_fees_text"
+                style="@style/TabletRoomRateNoticeFeesText"
+                android:drawableLeft="@drawable/ic_renovation"
+                android:text="@string/property_undergoing_renovations"
+                app:textStyle="light" />
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/room_rate_resort_fees_more_info"
+                style="@style/TabletRoomRateNoticeMoreInfo"
+                android:text="@string/more_info"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
