--- a/project/res/layout/fragment_tablet_hotel_reviews.xml
+++ b/project/res/layout/fragment_tablet_hotel_reviews.xml
@@ -117,7 +117,22 @@
                 <android.support.v4.view.ViewPager
                     android:id="@+id/pager"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:background="@color/bg_row_state_pressed"
+                    android:paddingBottom="20dp"
+                    android:paddingLeft="@dimen/tablet_detail_padding"
+                    android:paddingRight="@dimen/tablet_detail_padding" >
+
+                    <include
+                        layout="@layout/snippet_tablet_room_rate_add_select" />
+
+                </FrameLayout>
 
             </LinearLayout>
 
