--- a/project/res/layout/snippet_tablet_room_rate_add_select.xml
+++ b/project/res/layout/snippet_tablet_room_rate_add_select.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/room_rate_add_select_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical"
-    android:layout_marginTop="20dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:paddingTop="20dp" >
 
     <LinearLayout
         android:layout_width="0dp"
