--- a/project/res/values-hdpi/dimens.xml
+++ b/project/res/values-hdpi/dimens.xml
@@ -13,4 +13,7 @@
     <dimen name="trip_bucket_root_layout_padding_top">80dp</dimen>
     <dimen name="trip_bucket_empty_trip_container_padding_top">-40dp</dimen>
 
+    <!-- Tablet hotel map price pin -->
+    <dimen name="hotel_map_price_pin_text_size">10dp</dimen>
+
 </resources>
