Use MeasurementHelper just like the details

--- a/project/res/layout/fragment_tablet_hotel_reviews.xml
+++ b/project/res/layout/fragment_tablet_hotel_reviews.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="64dp" >
+    android:layout_height="match_parent" >
 
     <FrameLayout
         android:id="@+id/popup_frame_layout"
