--- a/project/res/values/styles.xml
+++ b/project/res/values/styles.xml
@@ -1066,7 +1066,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:textColor">#5f6061</item>
+        <item name="android:textColor">#666666</item>
         <item name="android:textSize">16sp</item>
         <item name="android:singleLine">true</item>
         <item name="android:drawablePadding">10dp</item>
@@ -1079,11 +1079,11 @@
         <item name="android:layout_marginLeft">15dp</item>
         <item name="android:layout_marginRight">15dp</item>
         <item name="android:text">@string/more_info</item>
-        <item name="android:textColor">#e4822a</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">#d97000</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:background">@drawable/bg_tablet_confirmation_actionbutton</item>
+        <item name="android:background">@drawable/bg_tablet_room_rate_more_info</item>
     </style>
 
 </resources>
